--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>BST Console</title>
     <script src="main.js"></script>
-</body>
+    <link rel="stylesheet" href="../src/style.css">
+  </head>
+  <body>
+    <div id="console"></div>
+  </body>
 </html>
